vendor/macro-string/tests/ui/relative_path.rs
use macro_string_eval::eval;

const _: &str = eval!(include_str!("relative/path.rs"));

fn main() {}
